--- a/redux-demo/package.json
+++ b/redux-demo/package.json
@@ -12,10 +12,12 @@
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
+    "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
