--- a/redux-demo/package.json
+++ b/redux-demo/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "@supabase/auth-ui-react": "^0.3.3",
+    "@supabase/auth-ui-shared": "^0.1.2",
+    "@supabase/supabase-js": "^2.10.0",
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
