--- a/redux-demo/package.json
+++ b/redux-demo/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
