--- a/redux-demo/package.json
+++ b/redux-demo/package.json
@@ -15,11 +15,10 @@
     "@supabase/supabase-js": "^2.10.0",
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
-    "i18next": "^22.4.11",
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
+    "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
