--- a/redux-demo/package.json
+++ b/redux-demo/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.10.0",
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
